Tests/ShouldSucceed/try21.adl
CONTEXT Test IN ENGLISH

PATTERN Test6
r :: A*C
s :: A*B
q :: B*C
RULE r = -(-s!-q)
ENDPATTERN

ENDCONTEXT

{-
   Purpose: This script is meant to study the equivalence of -(-s;-q) and s!q.
   Result: PASS
   Reason: type error on ;
   Error message:

   line 7:14, file "try6.adl":
       Inside term  -s;-q,

       between the target of  -s  and the source of  -q,
       concepts A and C are in conflict.
-}