Tests/ShouldFail/Try10.adl
CONTEXT Try10

PURPOSE PATTERN Try10 IN ENGLISH 
{+
This pattern is meant to test the translation of ObjectDefs in Ampersand.
-}

PATTERN Try10
  r :: A*A
  s :: C*X
  t :: A*B
  SPEC D ISA A
  SPEC D ISA C
ENDPATTERN

INTERFACE Overview : I[ONE]
  BOX [ as : V[ONE*A]
        BOX [ "id" : I
            , "r"  : r
            , r    : s
            , t    : t
              BOX [ "id" : I
                  , s    : s
                  , t    : t~;s
                  ]
            ]
      ]

ENDCONTEXT

{- 
   Purpose: to examine the error message deeply inside an interface.
   Result: FAIL
   Reason: on line 23 there is an error because the source of an attribute (s) does not match with its environment.
   
   Message:
   The interface named "Overview" contains errors:
   line 23:28, file "Try10.adl":
       The source of the term  s, which is C
       cannot be matched to B from its environment.
-}